--- a/udm-server/package.json
+++ b/udm-server/package.json
@@ -37,6 +37,7 @@
         "@types/express": "^4.17.1",
         "@types/express-session": "^1.17.3",
         "@types/graphql": "^14.5.0",
+        "@types/ioredis": "^4.22.1",
         "@types/jsonwebtoken": "^8.5.0",
         "@types/node": "^14.14.12",
         "@types/nodemailer": "^6.4.0",
