--- a/udm-web/package.json
+++ b/udm-web/package.json
@@ -12,6 +12,9 @@
   "proxy": "http://localhost:5000",
   "dependencies": {
     "@apollo/client": "^3.3.6",
+    "@chakra-ui/react": "^1.4.1",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
     "@hookform/resolvers": "^1.2.0",
     "@types/js-cookie": "^2.2.6",
     "date-fns": "^2.11.1",
@@ -25,9 +28,11 @@
     "react-dom": "16.13.1",
     "react-hook-form": "^6.13.1",
     "react-icons": "^4.1.0",
+    "react-is": "^17.0.2",
     "react-typed": "^1.2.0",
     "remark": "^12.0.0",
     "remark-html": "^12.0.0",
+    "styled-components": "^5.2.1",
     "yup": "^0.32.8"
   },
   "devDependencies": {
@@ -40,6 +45,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.6",
+    "@types/styled-components": "^5.1.9",
     "@types/yup": "^0.29.11",
     "@typescript-eslint/eslint-plugin": "^4.11.0",
     "@typescript-eslint/parser": "^4.11.0",
@@ -60,6 +66,7 @@
     "prettier": "^2.2.1",
     "prettier-eslint": "^12.0.0",
     "prettier-eslint-cli": "^5.0.0",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "webpack": "^5.28.0"
   }
 }
