--- a/udm-web/package.json
+++ b/udm-web/package.json
@@ -18,6 +18,7 @@
     "@hookform/resolvers": "^1.2.0",
     "@types/js-cookie": "^2.2.6",
     "date-fns": "^2.11.1",
+    "framer-motion": "^4.0.3",
     "graphql": "^15.4.0",
     "graphql-tag": "^2.11.0",
     "gray-matter": "^4.0.2",
@@ -36,6 +37,9 @@
     "yup": "^0.32.8"
   },
   "devDependencies": {
+    "@babel/core": "^7.13.10",
+    "@chakra-ui/cli": "^1.3.0",
+    "@chakra-ui/theme-tools": "^1.1.1",
     "@graphql-codegen/cli": "^1.20.0",
     "@graphql-codegen/typescript": "^1.19.0",
     "@graphql-codegen/typescript-operations": "^1.17.13",
