--- a/udm-web/package.json
+++ b/udm-web/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@apollo/client": "^3.3.6",
     "@chakra-ui/react": "^1.4.1",
+    "@chakra-ui/system": "^1.5.1",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
     "@hookform/resolvers": "^1.2.0",
