--- a/udm-web/package.json
+++ b/udm-web/package.json
@@ -1,77 +1,77 @@
 {
-  "name": "udm-web",
-  "version": "2.1.0",
-  "author": "@pau1tuck",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "gen": "graphql-codegen --config codegen.yml"
-  },
-  "proxy": "http://localhost:5000",
-  "dependencies": {
-    "@apollo/client": "^3.3.6",
-    "@chakra-ui/react": "^1.4.1",
-    "@chakra-ui/system": "^1.5.1",
-    "@emotion/react": "^11.1.5",
-    "@emotion/styled": "^11.1.5",
-    "@hookform/resolvers": "^1.2.0",
-    "@types/js-cookie": "^2.2.6",
-    "date-fns": "^2.11.1",
-    "framer-motion": "^4.0.3",
-    "graphql": "^15.4.0",
-    "graphql-tag": "^2.11.0",
-    "gray-matter": "^4.0.2",
-    "js-cookie": "^2.2.1",
-    "next": "^10.0.0",
-    "next-apollo": "^5.0.4",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-hook-form": "^6.13.1",
-    "react-icons": "^4.1.0",
-    "react-is": "^17.0.2",
-    "react-typed": "^1.2.0",
-    "remark": "^12.0.0",
-    "remark-html": "^12.0.0",
-    "styled-components": "^5.2.1",
-    "yup": "^0.32.8"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.13.10",
-    "@chakra-ui/cli": "^1.3.0",
-    "@chakra-ui/theme-tools": "^1.1.1",
-    "@graphql-codegen/cli": "^1.20.0",
-    "@graphql-codegen/typescript": "^1.19.0",
-    "@graphql-codegen/typescript-operations": "^1.17.13",
-    "@graphql-codegen/typescript-react-apollo": "^2.2.1",
-    "@types/graphql": "^14.5.0",
-    "@types/node": "^14.14.16",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-router-dom": "^5.1.6",
-    "@types/styled-components": "^5.1.9",
-    "@types/yup": "^0.29.11",
-    "@typescript-eslint/eslint-plugin": "^4.11.0",
-    "@typescript-eslint/parser": "^4.11.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.16.0",
-    "eslint-config-airbnb-typescript": "^12.0.0",
-    "eslint-config-prettier": "^7.1.0",
-    "eslint-config-react-app": "^6.0.0",
-    "eslint-import-resolver-typescript": "^2.3.0",
-    "eslint-plugin-flowtype": "^5.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.1.3",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.3.0",
-    "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-webpack-plugin": "^2.4.1",
-    "prettier": "^2.2.1",
-    "prettier-eslint": "^12.0.0",
-    "prettier-eslint-cli": "^5.0.0",
-    "typescript": "^4.1.3",
-    "webpack": "^5.28.0"
-  }
+    "name": "udm-web",
+    "version": "2.1.0",
+    "author": "@pau1tuck",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "gen:graphql": "graphql-codegen --config codegen.yml"
+    },
+    "proxy": "http://localhost:5000",
+    "dependencies": {
+        "@apollo/client": "^3.3.6",
+        "@chakra-ui/react": "^1.4.1",
+        "@chakra-ui/system": "^1.5.1",
+        "@emotion/react": "^11.1.5",
+        "@emotion/styled": "^11.1.5",
+        "@hookform/resolvers": "^1.2.0",
+        "@types/js-cookie": "^2.2.6",
+        "date-fns": "^2.11.1",
+        "framer-motion": "^4.0.3",
+        "graphql": "^15.4.0",
+        "graphql-tag": "^2.11.0",
+        "gray-matter": "^4.0.2",
+        "js-cookie": "^2.2.1",
+        "next": "^10.0.0",
+        "next-apollo": "^5.0.4",
+        "react": "16.13.1",
+        "react-dom": "16.13.1",
+        "react-hook-form": "^6.13.1",
+        "react-icons": "^4.1.0",
+        "react-is": "^17.0.2",
+        "react-typed": "^1.2.0",
+        "remark": "^12.0.0",
+        "remark-html": "^12.0.0",
+        "styled-components": "^5.2.1",
+        "yup": "^0.32.8"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.13.10",
+        "@chakra-ui/cli": "^1.3.0",
+        "@chakra-ui/theme-tools": "^1.1.1",
+        "@graphql-codegen/cli": "^1.20.0",
+        "@graphql-codegen/typescript": "^1.19.0",
+        "@graphql-codegen/typescript-operations": "^1.17.13",
+        "@graphql-codegen/typescript-react-apollo": "^2.2.1",
+        "@types/graphql": "^14.5.0",
+        "@types/node": "^14.14.16",
+        "@types/react": "^17.0.0",
+        "@types/react-dom": "^17.0.0",
+        "@types/react-router-dom": "^5.1.6",
+        "@types/styled-components": "^5.1.9",
+        "@types/yup": "^0.29.11",
+        "@typescript-eslint/eslint-plugin": "^4.11.0",
+        "@typescript-eslint/parser": "^4.11.0",
+        "babel-eslint": "^10.1.0",
+        "eslint": "^7.16.0",
+        "eslint-config-airbnb-typescript": "^12.0.0",
+        "eslint-config-prettier": "^7.1.0",
+        "eslint-config-react-app": "^6.0.0",
+        "eslint-import-resolver-typescript": "^2.3.0",
+        "eslint-plugin-flowtype": "^5.2.0",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-jest": "^24.1.3",
+        "eslint-plugin-jsx-a11y": "^6.4.1",
+        "eslint-plugin-prettier": "^3.3.0",
+        "eslint-plugin-react": "^7.21.5",
+        "eslint-plugin-react-hooks": "^4.2.0",
+        "eslint-webpack-plugin": "^2.4.1",
+        "prettier": "^2.2.1",
+        "prettier-eslint": "^12.0.0",
+        "prettier-eslint-cli": "^5.0.0",
+        "typescript": "^4.1.3",
+        "webpack": "^5.28.0"
+    }
 }
