--- a/udm-web/package.json
+++ b/udm-web/package.json
@@ -1,7 +1,7 @@
 {
     "name": "udm-web",
     "version": "2.1.0",
-    "author": "@pau1tuck",
+    "author": "Paul Tuck @pau1tuck",
     "private": true,
     "scripts": {
         "dev": "next dev",
@@ -16,7 +16,7 @@
         "@chakra-ui/system": "^1.5.1",
         "@emotion/react": "^11.1.5",
         "@emotion/styled": "^11.1.5",
-        "@hookform/resolvers": "^1.2.0",
+        "@hookform/resolvers": "1.3.0",
         "@types/js-cookie": "^2.2.6",
         "date-fns": "^2.11.1",
         "framer-motion": "^4.0.3",
