--- a/udm-server/package.json
+++ b/udm-server/package.json
@@ -23,6 +23,7 @@
         "express": "^4.17.1",
         "express-session": "^1.17.1",
         "graphql": "^15.4.0",
+        "graphql-upload": "^11.0.0",
         "ioredis": "^4.19.4",
         "jsonwebtoken": "^8.5.1",
         "nodemailer": "^6.4.17",
@@ -38,6 +39,7 @@
         "@types/express": "^4.17.1",
         "@types/express-session": "^1.17.3",
         "@types/graphql": "^14.5.0",
+        "@types/graphql-upload": "^8.0.4",
         "@types/ioredis": "^4.22.1",
         "@types/jsonwebtoken": "^8.5.0",
         "@types/node": "^14.14.12",
