--- a/udm-web/package.json
+++ b/udm-web/package.json
@@ -28,6 +28,7 @@
         "next-apollo": "^5.0.4",
         "react": "17.0.2",
         "react-dom": "17.0.2",
+        "react-h5-audio-player": "^3.7.0",
         "react-hook-form": "^6.13.1",
         "react-icons": "^4.1.0",
         "react-is": "^17.0.2",
