--- a/udm-server/package.json
+++ b/udm-server/package.json
@@ -12,9 +12,8 @@
         "lint": "eslint '*/**/*.{ts,tsx}' --quiet --fix"
     },
     "dependencies": {
-        "@types/uuid": "^8.3.0",
         "apollo-server-cache-redis": "^1.2.2",
-        "apollo-server-express": "^2.19.0",
+        "apollo-server-express": "^2.16.1",
         "argon2": "^0.27.0",
         "connect-redis": "^5.0.0",
         "cors": "^2.8.5",
@@ -27,6 +26,7 @@
         "ioredis": "^4.19.4",
         "jsonwebtoken": "^8.5.1",
         "nodemailer": "^6.4.17",
+        "passport-facebook": "^3.0.0",
         "pg": "^8.5.1",
         "redis": "^3.0.2",
         "reflect-metadata": "^0.1.13",
@@ -35,7 +35,7 @@
         "uuid": "^8.3.2"
     },
     "devDependencies": {
-        "@types/connect-redis": "^0.0.16",
+        "@types/connect-redis": "0.0.14",
         "@types/express": "^4.17.1",
         "@types/express-session": "^1.17.3",
         "@types/graphql": "^14.5.0",
@@ -44,7 +44,9 @@
         "@types/jsonwebtoken": "^8.5.0",
         "@types/node": "^14.14.12",
         "@types/nodemailer": "^6.4.0",
+        "@types/passport-facebook": "^2.1.10",
         "@types/redis": "^2.8.28",
+        "@types/uuid": "^8.3.0",
         "@typescript-eslint/eslint-plugin": "^4.11.0",
         "@typescript-eslint/parser": "^4.11.0",
         "class-validator": "^0.12.2",
@@ -57,6 +59,7 @@
         "eslint-plugin-prettier": "^3.3.0",
         "nodemon": "^2.0.6",
         "prettier": "^2.2.1",
+        "tslib": "^2.2.0",
         "typescript": "^4.1.3"
     }
 }
