--- a/udm-web/package.json
+++ b/udm-web/package.json
@@ -31,6 +31,7 @@
         "react-hook-form": "^6.13.1",
         "react-icons": "^4.1.0",
         "react-is": "^17.0.2",
+        "react-media-player": "^0.7.9",
         "react-typed": "^1.2.0",
         "remark": "^12.0.0",
         "remark-html": "^12.0.0",
