--- a/udm-web/tsconfig.json
+++ b/udm-web/tsconfig.json
@@ -1,9 +1,15 @@
 {
     "compilerOptions": {
         "target": "es5",
-        "lib": ["dom", "dom.iterable", "esnext"],
+        "lib": [
+            "dom",
+            "dom.iterable",
+            "esnext"
+        ],
         "paths": {
-            "~*": ["./src/*"]
+            "~*": [
+                "./src/*"
+            ]
         },
         "allowJs": true,
         "skipLibCheck": true,
@@ -17,6 +23,14 @@
         "isolatedModules": true,
         "jsx": "preserve"
     },
-    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-    "exclude": ["node_modules"]
+    "include": [
+        "next-env.d.ts",
+        "**/*.ts",
+        "**/*.tsx",
+        "**/*.js",
+        "**/*.jsx"
+    ],
+    "exclude": [
+        "node_modules"
+    ]
 }
