--- a/udm-server/tsconfig.json
+++ b/udm-server/tsconfig.json
@@ -24,7 +24,8 @@
         "moduleResolution": "node",
     },
     "include": [
-        "src/**/*"
+        "src/**/*",
+        "env.d.ts"
     ],
     "exclude": [
         "node_modules/"
