--- a/udm-server/.env.example
+++ b/udm-server/.env.example
@@ -6,6 +6,7 @@ CORS_ORIGIN=http://localhost:3000
 SESSION_SECRET=secret
 
 DB_URL=postgresql://[USER]:[PASSWORD]@[HOST]:[PORT]/[DATABASE]
+DB_HOST=localhost
 DB_PORT=5432
 
 REDIS_HOST=localhost
