--- a/udm-server/.env.example
+++ b/udm-server/.env.example
@@ -1,8 +1,12 @@
 NODE_ENV=development
 DEBUG=true
-PORT=5000
+
 WEB_CONCURRENCY=1
+
+HOST=localhost
+PORT=5000
 CORS_ORIGIN=http://localhost:3000
+
 SESSION_SECRET=secret
 
 DB_URL=postgresql://[USER]:[PASSWORD]@[HOST]:[PORT]/[DATABASE]
