--- a/udm-server/package.json
+++ b/udm-server/package.json
@@ -30,6 +30,7 @@
         "pg": "^8.5.1",
         "redis": "^3.0.2",
         "reflect-metadata": "^0.1.13",
+        "throng": "^5.0.0",
         "type-graphql": "^1.1.1",
         "typeorm": "^0.2.29",
         "uuid": "^8.3.2"
@@ -46,6 +47,7 @@
         "@types/nodemailer": "^6.4.0",
         "@types/passport-facebook": "^2.1.10",
         "@types/redis": "^2.8.28",
+        "@types/throng": "^5.0.0",
         "@types/uuid": "^8.3.0",
         "@typescript-eslint/eslint-plugin": "^4.11.0",
         "@typescript-eslint/parser": "^4.11.0",
