--- a/udm-web/package.json
+++ b/udm-web/package.json
@@ -18,6 +18,8 @@
         "@emotion/styled": "^11.1.5",
         "@hookform/resolvers": "1.3.0",
         "@types/js-cookie": "^2.2.6",
+        "animate.css": "^4.1.1",
+        "animate.css-react": "^1.1.0",
         "date-fns": "^2.11.1",
         "framer-motion": "^4.0.3",
         "graphql": "^15.4.0",
@@ -31,7 +33,6 @@
         "react-hook-form": "^6.13.1",
         "react-icons": "^4.1.0",
         "react-is": "^17.0.2",
-        "react-media-player": "^0.7.9",
         "react-typed": "^1.2.0",
         "remark": "^12.0.0",
         "remark-html": "^12.0.0",
